<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id = "@+id/case_name_label"
        android:text = "@string/case_stats_case_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="15dp"
        android:textSize = "20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/global_mean_label"
        android:text = "@string/mean_case_stats_label"
        app:layout_constraintStart_toEndOf="@id/case_name_label"
        app:layout_constraintEnd_toStartOf="@id/mean_of_50_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:textSize = "20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/mean_of_50_text_view"
        android:text = "@string/mo50_label"
        app:layout_constraintEnd_toStartOf="@id/case_number_of_solves"
        app:layout_constraintStart_toEndOf="@id/global_mean_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:textSize = "20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/case_number_of_solves"
        android:text = "@string/nr_of_solves_case_stats_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textSize = "20sp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/case_name_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id = "@+id/case_stats_recycler_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>