<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/are_you_sure_text_view"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        android:layout_marginTop = "50dp"
        android:text = "@string/are_you_sure_label"
        android:textSize = "25sp"/>

    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/cancel_button"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@id/are_you_sure_text_view"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        android:layout_marginStart = "30dp"
        android:layout_marginEnd = "50dp"
        android:layout_marginTop = "75dp"
        android:layout_marginBottom = "30dp"
        android:text = "@string/cancel_label"/>

    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/confirm_button"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf = "@id/are_you_sure_text_view"
        app:layout_constraintBottom_toBottomOf = "parent"
        android:layout_marginEnd = "30dp"
        android:layout_marginStart = "50dp"
        android:layout_marginTop = "75dp"
        android:layout_marginBottom = "30dp"        
        android:text = "@string/confirm_label"/>

</androidx.constraintlayout.widget.ConstraintLayout> 