<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/timer_text_view_default"
        android:textAlignment="gravity"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/timer_activation_text_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/case_setup_text_view"
        tools:text = "R' U' F' R U R' U' R' F R2 U' R' U' R U R' U R"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id = "@+id/settings_button"
        android:background="@drawable/ic_outline_settings_24"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/case_setup_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/number_of_solves"
        tools:text = "1234"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/number_of_solves_label"
        app:layout_constraintEnd_toEndOf="@id/number_of_solves_label"
        app:layout_constraintBottom_toTopOf="@id/number_of_solves_label"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/number_of_solves_label"
        android:text = "@string/nr_of_solves_label"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/solves_list"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/global_average"
        tools:text = "2.5"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/global_average_label"
        app:layout_constraintEnd_toEndOf="@id/global_average_label"
        app:layout_constraintBottom_toTopOf="@id/global_average_label"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/global_average_label"
        android:text = "@string/mean_label"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/solves_list"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/total_time"
        tools:text = "2.5"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/total_time_label"
        app:layout_constraintEnd_toEndOf="@id/total_time_label"
        app:layout_constraintBottom_toTopOf="@id/total_time_label"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/total_time_label"
        android:text = "@string/total_time_label"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/global_average_label"
        app:layout_constraintStart_toStartOf="@id/global_average_label"
        app:layout_constraintBottom_toTopOf="@id/global_average"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/solves_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/number_of_solves"
        app:layout_constraintStart_toStartOf="@id/number_of_solves"
        android:layout_marginBottom="40dp"
        android:text = "@string/solve_history_button_label"
        android:background="#00ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/per_case_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/global_average_label"
        app:layout_constraintStart_toStartOf="@id/global_average_label"
        android:layout_marginBottom="40dp"
        android:text = "@string/case_stats_label"
        android:background="#00ffffff"/>
</androidx.constraintlayout.widget.ConstraintLayout>